@@ -21,6 +21,7 @@ repositories {
 
 dependencies {
     implementation("dev.langchain4j:langchain4j:1.7.1")
+    implementation("dev.langchain4j:langchain4j-gpu-llama3:1.7.1-beta14")
     implementation("dev.langchain4j:langchain4j-open-ai:1.7.1")
     testImplementation(kotlin("test"))
 }
@@ -41,14 +42,9 @@ tasks {
         // Target version of the generated JVM bytecode. It is used for type resolution.
         jvmTarget = "21"
         reports {
-            // observe findings in your browser with structure and code snippets
             html.required.set(true)
-            // checkstyle like format mainly for integrations like Jenkins
             xml.required.set(true)
-            // similar to the console output, contains issue signature to manually edit baseline files
             txt.required.set(true)
-            // standardized SARIF format (https://sarifweb.azurewebsites.net/) to support integrations
-            // with Github Code Scanning
             sarif.required.set(true)
         }
     }
@@ -71,8 +67,8 @@ kotlin {
 }
 
 application {
-    mainClass.set("SaladSampleKt")
-    applicationDefaultJvmArgs = listOf("--add-modules=jdk.incubator.vector")
+    mainClass.set("org.example.MainKt")
+    applicationDefaultJvmArgs = listOf("--add-modules=jdk.incubator.vector", "--enable-preview")
 }
 
 ktlint {
